# Reporting-Agent

./: .gitignore  .mcp.json  README.md  next.config.ts  package.json  start-toolbox.sh  tools.yaml  tools_real.yaml  tsconfig.json
.claude/: settings.json
agent/: callbacks.py  config.py  context.py  dashboard_queries.py  data_store.py  db_connections.py  main.py  prompts.py  pyproject.toml  report_queries.py
agent/config/: mariadb_queries.json  queries.json
app/: globals.css  layout.tsx  page.tsx
app/api/copilotkit/: route.ts
app/historical-reports/: page.tsx
app/login/: page.tsx
components/: AssistantMessage.tsx  Dashboard.tsx  DateRangeSelector.tsx  Footer.tsx  Header.tsx  copilot-kit-with-auth.tsx
components/generative-ui/: ApprovalCard.tsx  DataCarousel.tsx
components/sidebar/: Sidebar.tsx  SidebarContent.tsx  SidebarTrigger.tsx  SidebarUserProfile.tsx  index.ts  sidebar-data.ts
components/ui/: area-chart.tsx  bar-chart.tsx  data-preview.tsx  query-display.tsx  scatter-chart.tsx  scorecard.tsx  tabs.tsx
lib/: auth.ts  constants.ts  dashboard-config.ts  prompt.ts  types.ts  utils.ts
src/app/historical-reports/: page.tsx
src/app/settings/: page.tsx
